geo-location/geo-tagger/istio/wasm-repo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wasm-repo-deployment
  namespace: istio-ingress
  labels:
    app: wasm-repo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wasm-repo
  template:
    metadata:
      labels:
        app: wasm-repo
    spec:
      containers:
      - name: wasm-repo-container
        image: boeboe/wasm-repo:v0.1.0
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/tmp/uploads"
          name: upload-volume
        resources:
          requests:
            memory: "64Mi"
            cpu: "125m"
          limits:
            memory: "128Mi"
            cpu: "250m"
      volumes:
      - name: upload-volume
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: wasm-repo
  namespace: istio-ingress
spec:
  selector:
    app: wasm-repo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: wasm-repo-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "wasm-repo.tetrate.io"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wasm-repo-virtual-service
  namespace: istio-ingress
spec:
  hosts:
  - "wasm-repo.tetrate.io"
  gateways:
  - wasm-repo-gateway
  http:
  - route:
    - destination:
        host: wasm-repo
        port:
          number: 80
